--- a/projects.json
+++ b/projects.json
@@ -8,7 +8,8 @@
     "details": {
       "language": "Python",
       "tech_stack": "Native",
-      "description": null
+      "description": null,
+      "status": "completed"
     }
   },
   {
@@ -20,7 +21,8 @@
     "details": {
       "language": "Python",
       "tech_stack": "Native",
-      "description": null
+      "description": null,
+      "status": "completed"
     }
   },
   {
@@ -32,7 +34,8 @@
     "details": {
       "language": "Python",
       "tech_stack": "Native",
-      "description": null
+      "description": null,
+      "status": "completed"
     }
   },
   {
@@ -44,7 +47,8 @@
     "details": {
       "language": "Java",
       "tech_stack": "Android Studio",
-      "description": null
+      "description": null,
+      "status": "completed"
     }
   },
   {
@@ -56,7 +60,8 @@
     "details": {
       "language": "Java",
       "tech_stack": "Android Studio",
-      "description": null
+      "description": null,
+      "status": "completed"
     }
   },
   {
@@ -68,7 +73,8 @@
     "details": {
       "language": "PHP",
       "tech_stack": "Native",
-      "description": null
+      "description": null,
+      "status": "completed"
     }
   }
 ]
