--- a/projects.json
+++ b/projects.json
@@ -94,7 +94,9 @@
   {
     "title": "Aplikasi Gudang / Inventaris",
     "media_url": {
-      "images": null,
+      "images": [
+        "https://drive.google.com/file/d/1YeaYNyPijCPRGXBIu7V7p71kF5Gyg7Xx/preview"
+      ],
       "videos": null
     },
     "details": {
