--- a/projects.json
+++ b/projects.json
@@ -17,7 +17,7 @@
   {
     "title": "Aplikasi RDD (Road Damage Detection)",
     "media_url": {
-      "images": null,
+      "images": "@gh/RDD",
       "videos": null
     },
     "details": {
