--- a/projects.json
+++ b/projects.json
@@ -1,5 +1,47 @@
 [
   {
+    "title": "Multi-Role Dashboard Bintang network",
+    "media_url": {
+      "images": null,
+      "videos": "https://drive.google.com/file/d/1azSQHNRtpZ53a4BZpM7ETI88KW1-VfXF/preview"
+    },
+    "details": {
+      "language": "PHP",
+      "tech_stack": "Native",
+      "description": null,
+      "status": "completed"
+    }
+  },
+  {
+    "title": "Multi-Role Dashboard Survey Polinema",
+    "media_url": {
+      "images": "@gh/Survey Polinema",
+      "videos": [
+        "https://drive.google.com/file/d/1hBBA0_vVj542d-hCsHluB-lMMOLMQgGr/preview",
+        "https://drive.google.com/file/d/1M9hYl0ps4u_lSirGRddWuN2z-V8QOJuE/preview"
+      ]
+    },
+    "details": {
+      "language": "PHP",
+      "tech_stack": "Native",
+      "description": null,
+      "status": "completed"
+    }
+  },
+  {
+    "title": "Multi-Role Dashboard E-Commerce Fashion Batik",
+    "media_url": {
+      "images": "@gh/Ecommerce Batik",
+      "videos": "https://drive.google.com/file/d/1ogal_maG9KHFIsDmfTzG6PPkGmachNTT/preview"
+    },
+    "details": {
+      "language": "PHP",
+      "tech_stack": "Native",
+      "description": null,
+      "status": "completed"
+    }
+  },
+  {
     "title": "Fullstack website Hilltown Resort",
     "media_url": {
       "images": "@gh/Hilltown Resort",
