--- a/projects.json
+++ b/projects.json
@@ -29,7 +29,7 @@
     }
   },
   {
-    "title": "Multi-Role Dashboard E-Commerce Fashion Batik",
+    "title": "Multi-Role Dashboard E-Commerce Batik",
     "media_url": {
       "images": "@gh/Ecommerce Batik",
       "videos": "https://drive.google.com/file/d/1ogal_maG9KHFIsDmfTzG6PPkGmachNTT/preview"
