--- a/projects.json
+++ b/projects.json
@@ -1,8 +1,8 @@
 [
   {
-    "title": "Multi-Role Dashboard Bintang network",
+    "title": "Multi-Role Dashboard Bintang Network",
     "media_url": {
-      "images": null,
+      "images": "@gh/Bintang Network",
       "videos": "https://drive.google.com/file/d/1azSQHNRtpZ53a4BZpM7ETI88KW1-VfXF/preview"
     },
     "details": {
